Dummy_Package_for_scratch_org/main/default/objects/Destination_Org__c/Destination_Org__c.object-meta.xml
<CustomObject>
    <label>Destination Credential</label>
    <nameField>
        <displayFormat>DO-{0000}</displayFormat>
        <label>Destination Credential Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destination Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>