Dummy_Package_for_scratch_org/main/default/objects/Destination_Org__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipName>Destination_Orgs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>