Dummy_Package_for_scratch_org/main/default/objects/Destination_Org__c/fields/Step_Count__c.field-meta.xml
<CustomField>
    <fullName>Step_Count__c</fullName>
    <label>Step Count</label>
    <summaryForeignKey>Deployment_Job__c.Destination_Org__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>