Dummy_Package_for_scratch_org/main/default/objects/Destination_Org__c/fields/SUM_Deployed__c.field-meta.xml
<CustomField>
    <fullName>SUM_Deployed__c</fullName>
    <label>SUM Deployed</label>
    <summarizedField>Deployment_Job__c.Deployed__c</summarizedField>
    <summaryForeignKey>Deployment_Job__c.Destination_Org__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>