Dummy_Package_for_scratch_org/main/default/objects/Destination_Org__c/fields/To_Org__c.field-meta.xml
<CustomField>
    <fullName>To_Org__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Credential</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Org__c.CreatedById</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Destination Credentials</relationshipLabel>
    <relationshipName>Deployments_to</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>