Dummy_Package_for_scratch_org/main/default/objects/Destination_Org__c/fields/To_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>To_Org_Name__c</fullName>
    <formula>To_Org__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Credential Name</label>
    <type>Text</type>
</CustomField>